# hello-world

./: .gitignore  .pnp.js  package.json  rollup.config.js
.github/workflows/: Tests.yml
public/: index.tauri.html
src-tauri/: Cargo.toml  tauri.conf.json
